--- a/README.html
+++ b/README.html
@@ -454,6 +454,25 @@ function yields the same results as <code>lmer</code></li>
 </ul></li>
 </ul>
 </div>
+<div id="final-project" class="section level1">
+<h1>Final Project</h1>
+<ul>
+<li>Final Project focuses on the analysis of the data using methods
+covered in HW2-4. The purpose of the project was to:
+<ul>
+<li>be able to develop a hypothesis from the exploratory data analysis
+(or data documentation like in the case of my project)</li>
+<li>make proper modeling choices and assumptions</li>
+<li>make Statistical Analysis Plan (SAP)</li>
+<li>deliver the results as a report</li>
+</ul></li>
+<li>Working folder covers all parts of the process, with the model
+development steps captured in the final report <code>.qmd</code>
+file</li>
+<li>I am working on review of existing R function and packages to use
+LASSO shrinkage for variable selection in the GEE and GLMM models.</li>
+</ul>
+</div>
 
 
 
